--- a/YGCGanpati/Views/Account/Register.cshtml
+++ b/YGCGanpati/Views/Account/Register.cshtml
@@ -14,7 +14,7 @@
     <div class="form-group">
         @Html.LabelFor(m => m.Name, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Name, new { @class = "form-control ICapital" })
+            @Html.TextBoxFor(m => m.Name, new { @class = "form-control ICapital", @placeholder = "FirstName LastName"  })
         </div>
     </div>
     <div class="form-group">
