--- a/YGCGanpati/Views/Event/Index.cshtml
+++ b/YGCGanpati/Views/Event/Index.cshtml
@@ -31,7 +31,7 @@
         {
             <tr>
                 <td>
-                    <span class="glyphicon glyphicon-calendar"> <b>@Html.DisplayFor(modelItem => item.EventDate)</b></span>
+                    <b>@Html.DisplayFor(modelItem => item.EventDate)</b>
                 </td>
                 <td>
                     @{
