--- a/YGCGanpati/Views/Quiz/Index.cshtml
+++ b/YGCGanpati/Views/Quiz/Index.cshtml
@@ -11,7 +11,7 @@
     </div>
 </div>
 <br />
-@{
+@*@{
     DateTime dt = DateTime.MinValue;
 }
 
@@ -95,4 +95,8 @@ $(document).ready(function () {
         return false;
     });
 });
-</script>
+</script>*@
+
+<div class="warning" style="width:auto; margin:10px; text-align:center">
+    <h3>Quiz isCompleted!<br />Thank you for your Participation.</h3>
+</div>
